syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dora-network/dora-dev-test/api;api";

service DoraDevTestService {
  // HealthCheck is a simple health check endpoint that returns a 200 OK
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse) {}
  rpc GetTicks(GetTicksRequest) returns (GetTicksResponse) {}
}

message HealthCheckResponse {
  google.protobuf.Timestamp last_heartbeat = 1;
}

message GetTicksRequest {
  string symbol = 1;
  optional google.protobuf.Timestamp start = 2;
  optional google.protobuf.Timestamp end = 3;
  optional int64 limit = 4;
}

message Tick {
  string asset_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  double last_price = 3;
  double last_size = 4;
  double best_bid = 5;
}

message GetTicksResponse {
  repeated Tick ticks = 1;
}